<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.inclass10.ShowExpensesActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt7"
        android:id="@+id/txt7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt8"
        android:id="@+id/txtname"
        android:layout_below="@+id/txt7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt3"
        android:id="@+id/txtcategory"
        android:layout_below="@+id/txtname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt4"
        android:id="@+id/txtamount"
        android:layout_below="@+id/txtcategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt5"
        android:id="@+id/txtdate"
        android:layout_below="@+id/txtamount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvname"
        android:layout_alignRight="@+id/txt7"
        android:layout_alignEnd="@+id/txt7"
        android:layout_alignLeft="@+id/txt7"
        android:layout_alignStart="@+id/txt7"
        android:layout_alignTop="@+id/txtname"
        android:layout_alignBottom="@+id/txtname"
        android:textSize="20dp"
        android:layout_marginLeft="-20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvcategory"
        android:layout_alignRight="@+id/tvname"
        android:layout_alignEnd="@+id/tvname"
        android:layout_alignLeft="@+id/tvname"
        android:layout_alignStart="@+id/tvname"
        android:layout_above="@+id/txtamount"
        android:layout_alignTop="@+id/txtcategory"
        android:textSize="20dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvamount"
        android:layout_alignRight="@+id/tvcategory"
        android:layout_alignEnd="@+id/tvcategory"
        android:layout_alignLeft="@+id/tvcategory"
        android:layout_alignStart="@+id/tvcategory"
        android:layout_alignBottom="@+id/txtamount"
        android:layout_alignTop="@+id/txtamount"
        android:textSize="20dp"
        android:layout_marginLeft="-3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvdate"
        android:layout_alignRight="@+id/tvamount"
        android:layout_alignEnd="@+id/tvamount"
        android:layout_alignLeft="@+id/tvamount"
        android:layout_alignStart="@+id/tvamount"
        android:layout_above="@+id/txtreceipt"
        android:layout_alignTop="@+id/txtdate"
        android:textSize="20dp"
        android:layout_marginLeft="-35dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnfinish"
        android:id="@+id/btnfinish"
        android:onClick="finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp" />



</RelativeLayout>
